# MA_03-txt-key-generator

./: .env.example  .gitignore  CONTRIBUTING.md  README.md  pyproject.toml  setup.cfg
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
examples/: brief.md
src/txt_key_generator/: __init__.py  ai.py  app.py  bot.py  config.py  formatting.py  orchestrator.py  schemas.py
src/txt_key_generator/agents/: __init__.py  checker.py  generator.py  reviser.py
src/txt_key_generator/skills/: __init__.py  checker.py  generator.py  key_extraction.py  reviser.py  system.py
tests/: __init__.py  fakes.py  test_checker_skills.py  test_generator_skills.py  test_orchestrator.py  test_system_skills.py
