[project]
name = "ma-03-txt-key-generator"
version = "0.1.0"
description = "Telegram AI agent text generator with generator/checker/reviser workflow."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiogram>=3.7,<4",
    "aiohttp>=3.9,<4",
    "openai>=1.82,<2",
    "pydantic>=2.7,<3",
    "pydantic-settings>=2.2,<3",
    "python-docx>=1.1,<2",
    "pypdf>=4.2,<6",
    "python-dotenv>=1.0,<2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2,<9",
    "pytest-asyncio>=0.23,<1",
    "reportlab>=4.2,<5",
]

[project.scripts]
txt-key-generator-bot = "txt_key_generator.bot:main"

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"

