[metadata]
name = ma-03-txt-key-generator
version = 0.1.0
description = Telegram AI agent text generator with generator/checker/reviser workflow.
long_description = file: README.md
long_description_content_type = text/markdown

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.12
install_requires =
    aiogram>=3.7,<4
    aiohttp>=3.9,<4
    openai>=1.82,<2
    pydantic>=2.7,<3
    pydantic-settings>=2.2,<3
    python-docx>=1.1,<2
    pypdf>=4.2,<6
    python-dotenv>=1.0,<2

[options.packages.find]
where = src

[options.extras_require]
dev =
    pytest>=8.2,<9
    pytest-asyncio>=0.23,<1
    reportlab>=4.2,<5

[options.entry_points]
console_scripts =
    txt-key-generator-bot = txt_key_generator.bot:main

